--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@ function attachFormSubmitHandler() {
   
  
   
+  <!-- Commenting out User Flow Section -->
+  <!--
   <section id="user-flow" style="background-color: black; color: white; padding: 50px 0;">
     <div class="section-header">
       <h1 style="text-align: center; font-size: 0em; margin-bottom: 100px;">User Flow</h1>
@@ -234,28 +236,26 @@ prevButton.addEventListener("click", () => {
 updateCarousel();
 
 </script>
+-->
  
  
-  <!-- Character Portal Section -->
+  <!-- Commenting out Character Portal Section -->
+  <!--
   <section id="character-portal" class="character-portal">
     <h2 class="fade-in">Character Portal</h2><p class="fade-in" style="text-align: center; font-size: 1.2em; color: black; width: 50%; margin: 0 auto; padding-bottom: 30px;">
       Create beautiful 3D characters that celebrate diversity and individuality. Our intuitive platform lets you easily craft, save, and share your creations.    </p>
     <div class="character-grid">
-      <!-- Column 1 -->
       <div class="character-column">
         <h3 class="fade-in">Facial Details</h3>
         <p class="fade-in">Capture a high levl of detail in structure, skin, and makeup</p>
         <img src="charscreen.png" alt="Character 1" />
         
       </div>
-      <!-- Column 2 -->
       <div class="character-column">
         <h3 class="fade-in">Body details</h3>
         <p class="fade-in"> Customize the body type, details, and clothing</p>
         <img src="body.png" alt="Character 2" />
       </div>
-      <!-- Column 3 -->
-      <!-- Column 4 -->
       <div class="character-column">
         <h3 class="fade-in">Character Library</h3>
         <p class="fade-in">Save the characters you create for gameplay</p>
@@ -263,6 +263,7 @@ updateCarousel();
       </div>
     </div>
   </section>
+  -->
   </body>
  
   <script>
